--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
                 <div data-date="Jan 2019 - Present">
                     <h3>Graduate Teaching Assistant</h3>
                     <h4>The University of North Carolina at Charlotte</h4>
-                    <p>Grading, proctoring and tutoring students for &ldquo;Software Development Projects&rdquo; course. <br /> Collaborating with students in projects which used full-stack technologies using Agile development. <br /> Employed languages like Python, Android, Javascript, PHP, and frameworks like Express.js, Angular.js, Bootstrap, RESTful for application dev.</p>
+                    <ul>
+                        <li>Grading, proctoring and tutoring students for &ldquo;Software Development Projects&rdquo; course.</li> 
+                        <li>Collaborating with students in projects which used full-stack technologies using Agile development.</li> 
+                        <li>Employed languages like Python, Android, Javascript, PHP, and frameworks like Express.js, Angular.js, Bootstrap, RESTful for application dev.</li>
+                    </ul>
                 </div>
                 <div data-date="Sep 2015 &ndash; August 2018">
                     <h3>Business Analyst - MSBI | Data Analyst | Microsoft Data Engineer</h3>
