--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </div>
                     <div class="col-md-8">
                         <p>Nikhil is an ambitious person with a penchant to work innovatively to deliver solution-based products which improve the lives of people and make companies be more remarkable. Nikhil aims to be a global professional and innovator and is interested in building and implementing systems which are more profitable to the organization using machine learning, business intelligence, and data analytics.</p><br />
-                        <p>He is a Data engineer and business intelligence (BI) professional with proven skills creating customer value in a solutions business; 3 years' experience building and implementing customer facing, production-ready, scalable solutions to make Xbox and Windows campaign more profitable; Passionate about delivering value to businesses through data science and analytics.</p><br />
+                        <p>Data engineer and business intelligence (BI) professional with proven skills creating customer value in a solutions business; 3 years' experience building and implementing customer facing, production-ready, scalable solutions to make Xbox and Windows campaign more profitable; Passionate about delivering value to businesses through data science and analytics.</p><br />
                         <p>In his spare time, Nikhil has a passion for traveling, skydiving and cooking which boast a versatile personality.</p>
                     </div>
                 </div>
@@ -59,8 +59,8 @@
                     <h3>Graduate Teaching Assistant</h3>
                     <h4>The University of North Carolina at Charlotte</h4>
                     <ul>
-                        <li>Grading, proctoring and tutoring students for &ldquo;Software Development Projects&rdquo; course.</li> 
-                        <li>Collaborating with students in projects which used full-stack technologies using Agile development.</li> 
+                        <li>Grading, proctoring and tutoring students for &ldquo;Software Development Projects&rdquo; course.</li>
+                        <li>Collaborating with students in projects which used full-stack technologies using Agile development.</li>
                         <li>Employed languages like Python, Android, Javascript, PHP, and frameworks like Express.js, Angular.js, Bootstrap, RESTful for application dev.</li>
                     </ul>
                 </div>
@@ -119,8 +119,9 @@
             <h2 class="heading">Projects</h2>
             <div class="container">
                 <div class="row">
+                    <a href="https://github.com/jadhavnikhil78/Microsoft-Malware-Prediction">
                     <div class="project shadow-large">
-                        <div class="project-image"><img src="images/project.jpg" /></div>
+                        <div class="project-image"><img src="images/Microsoft.jpg" /></div>
                         <!-- End .project-image -->
                         <div class="project-info">
                             <h3>Microsoft Malware Prediction</h3>
@@ -128,8 +129,10 @@
                             <!--<a href="#">View Project</a> --></div>
                         <!-- End .project-info --></div>
                     <!-- End .project -->
+                    </a>
+                    <a href="https://github.com/jadhavnikhil78/Action-Rule-Discovery">
                     <div class="project shadow-large">
-                        <div class="project-image"><img src="images/lzw.jpg" /></div>
+                        <div class="project-image"><img src="images/DataMining.jpg" /></div>
                         <!-- End .project-image -->
                         <div class="project-info">
                             <h3>Action Rules Discovery</h3>
@@ -137,8 +140,9 @@
                             <!--<a href="#">View Project</a> --></div>
                         <!-- End .project-info --></div>
                     <!-- End .project -->
+                    </a>
                     <div class="project shadow-large">
-                        <div class="project-image"><img src="images/pwa.jpg" /></div>
+                        <div class="project-image"><img src="images/Xbox_Windows.jpg" /></div>
                         <!-- End .project-image -->
                         <div class="project-info">
                             <h3>Xbox And Windows Data Pipelines</h3>
@@ -148,7 +152,7 @@
                         <!-- End .project-info --></div>
                     <!-- End .project -->
                     <div class="project shadow-large">
-                        <div class="project-image"><img src="images/database.jpg" /></div>
+                        <div class="project-image"><img src="images/Xbox.jpg" /></div>
                         <!-- End .project-image -->
                         <div class="project-info">
                             <h3>Xbox Campaign Post Analysis</h3>
@@ -157,8 +161,9 @@
                             <!--<a href="#">View Project</a> --></div>
                         <!-- End .project-info --></div>
                     <!-- End .project -->
+                    <a href = "https://github.com/jadhavnikhil78/Android-Projects">
                     <div class="project shadow-large">
-                        <div class="project-image"><img src="images/ocr.jpg" /></div>
+                        <div class="project-image"><img src="images/Mobile_App.jpg" /></div>
                         <!-- End .project-image -->
                         <div class="project-info">
                             <h3>Mobile Application Development</h3>
@@ -166,9 +171,11 @@
                             <!--<a href="#">View Project</a> --></div>
                         <!-- End .project-info -->
                     </div>
+                    </a>
+                    <a href = "https://github.com/jadhavnikhil78/Signature-Verification">
                     <!-- End .project -->
                     <div class="project shadow-large">
-                        <div class="project-image"><img src="images/ocr.jpg" /></div>
+                        <div class="project-image"><img src="images/Signature.jpg" /></div>
                         <!-- End .project-image -->
                         <div class="project-info">
                             <h3>Signature Verification</h3>
@@ -176,9 +183,11 @@
                             <!--<a href="#">View Project</a> --></div>
                         <!-- End .project-info -->
                     </div>
+                    </a>
+                    <a href = "https://github.com/jadhavnikhil78/Autonomous-Driving">
                     <!-- End .project -->
                     <div class="project shadow-large">
-                        <div class="project-image"><img src="images/ocr.jpg" /></div>
+                        <div class="project-image"><img src="images/Autonomous.jpg" /></div>
                         <!-- End .project-image -->
                         <div class="project-info">
                             <h3>Autonomous Driving</h3>
@@ -186,9 +195,10 @@
                             <!--<a href="#">View Project</a> --></div>
                         <!-- End .project-info -->
                     </div>
+                    </a>
                     <!-- End .project -->
                     <div class="project shadow-large">
-                        <div class="project-image"><img src="images/ocr.jpg" /></div>
+                        <div class="project-image"><img src="images/AdHoc.jpg" /></div>
                         <!-- End .project-image -->
                         <div class="project-info">
                             <h3>Discovery and Verification of Neighbor Position In Mobile Ad-hoc Network</h3>
