--- a/index.html
+++ b/index.html
@@ -55,7 +55,21 @@
         <div id="experience" class="background-alt">
             <h2 class="heading">Experience</h2>
             <div id="experience-timeline">
-                <div data-date="Jan 2019 - Present">
+                <div data-date="April 2020 - Present">
+                    <h3>Cloud Support Associate(Database - RDS)</h3>
+                    <h4>Amazon Web Services, Inc.</h4>
+                    <ul>
+                        <li>Provide Technical consultancy and operational support to thousands of customers of AWS across the globe for popular Services like RDS database systems(MySQL, SQL Server, Postgres, Aurora and Oracle), Data Migration.</li>
+                        <li>Use expertise to debug and identify root cause(s) to complex support problems that may involve multiple services or cross into other domains.</li>
+                        <li>Use technical judgement to inform long term versus short term technology and customer trade offs.</li>
+                        <li>Provide guidance around systems limitations, scaling factors, boundary conditions and/or reasons for architectural decisions.</li>
+                        <li>Work directly with Amazon Web Service architects to help reproduce and resolve customer issues</li>
+                        <li>Interoperability & configuration guidance and troubleshooting for Third-Party Software products</li>
+                        <li>Provide cloud Operational reviews, recommendations, and reporting.</li>
+                        <li>Work with customers' DBAs on database performance issues, best practices to use AWS database services, features and tools.</li>
+                    </ul>
+                </div>
+                <div data-date="Jan 2019 &ndash; Dec 2019">
                     <h3>Graduate Teaching Assistant</h3>
                     <h4>The University of North Carolina at Charlotte</h4>
                     <ul>
