--- a/index.html
+++ b/index.html
@@ -294,6 +294,8 @@
                 <li>Power BI</li>
                 <li>Amazon S3</li>
                 <li>AWS</li>
+                <li>AWS RDS</li>
+                <li>AWS CloudWatch</li>
                 <li>Git</li>
                 <li>GitHub</li>
                 <li>HTML</li>
