--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="col-md-8">
                         <p>Nikhil is an ambitious person with a penchant to work innovatively to deliver solution-based products which improve the lives of people and make companies be more remarkable. Nikhil aims to be a global professional and innovator and is interested in building and implementing systems which are more profitable to the organization using machine learning, business intelligence, and data analytics.</p><br />
                         <p>Data engineer and business intelligence (BI) professional with proven skills creating customer value in a solutions business; 3 years' experience building and implementing customer facing, production-ready, scalable solutions to make Xbox and Windows campaign more profitable; Passionate about delivering value to businesses through data science and analytics.</p><br />
-                        <p>In his spare time, Nikhil has a passion for traveling, skydiving and cooking which boast a versatile personality.</p>
+                        <p>In his spare time, Nikhil has a passion for traveling, skydiving, draining PS5 controller's battery, watching anime and cooking which boast a versatile personality.</p>
                     </div>
                 </div>
             </div>
